--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,29 @@
 {
-    "name": "hnm/report",
-    "type": "n2n-module",
-    "description": "Report module for n2n rocket",
-    "keywords": ["report","n2n-tmpl-module", "n2n-module", "n2n"],
-    "homepage": "https://n2n.rocks/",
-    "license": "MIT",
     "authors": [
         {
-            "name": "Thomas Günther",
-            "email": "guenther@hnm.ch"
+            "email": "guenther@hnm.ch",
+            "name": "Thomas G\u00fcnther"
         }
     ],
-    "require": {
-        "php": ">=7.0",
-        "n2n/n2n-composer-module-installer": "7.1.x-dev",
-        "n2n/rocket": "2.0.x-dev"
-    },
     "autoload": {
         "psr-4": {
             "report\\": "src/app/report"
         }
-    }
+    },
+    "description": "Report module for n2n rocket",
+    "homepage": "https://n2n.rocks/",
+    "keywords": [
+        "report",
+        "n2n-tmpl-module",
+        "n2n-module",
+        "n2n"
+    ],
+    "license": "MIT",
+    "name": "hnm/report",
+    "require": {
+        "n2n/n2n-composer-module-installer": "~7.1.1",
+        "n2n/rocket": "^2.0.0",
+        "php": ">=7.0"
+    },
+    "type": "n2n-module"
 }
