--- a/src/var/etc/app.ini
+++ b/src/var/etc/app.ini
@@ -98,5 +98,5 @@ default.dialect = "n2n\impl\persistence\meta\mysql\MysqlDialect"
 
 
 [locales]
-default = "en"
-admin = "en"
+default = "de"
+admin = "de"
