--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,28 @@
 			"email" : "guenther@hnm.ch"
 		}
 	],
+	"minimum-stability" : "dev",
+	"prefer-stable": true,
+	"config" : {
+		"vendor-dir" : "src/vendor"
+	},
 	"require" : {
 		"php" : ">=7.0",
 		"n2n/n2n-composer-module-installer" : "^7.1",
 		"n2n/rocket": "^3"
 	},
+	"require-dev" : {
+		"n2n/hangar": "^8.0",
+		"phpunit/phpunit" : "^9.5"
+	},
 	"autoload" : {
 		"psr-4" : {
 			"report\\" : "src/app/report"
+		}
+	},
+	"autoload-dev" : {
+		"psr-4" : {
+			"report\\" : "src/test/report"
 		}
 	}
 }
